# swarm_vins

./: .clang-format  .gitignore  README.md  sync_src_changes.sh
VINS-Fusion/config/: rotors.yaml  rotors_left.yaml
VINS-Fusion/vins_estimator/launch/: rotors.launch
network_utils/: CMakeLists.txt  package.xml
network_utils/config/: default.rviz  drone_config.cfg  single_drone.rviz  single_node_multi_drones.rviz
network_utils/launch/: all_start.launch  drone_node.launch  network_start.launch  rviz_single_drone.launch  rviz_single_node_multi_drones.launch  server_node.launch  start_drone.launch
network_utils/scripts/: publish_global_odom.py
network_utils/shfiles/: 000_runall.py  1_start_all_vins.sh  2_start_rviz.sh  3_start_all_drone_node.sh  4_start_all_drones.sh  5_start_all_ranging_fusion.sh  6_start_all_run_control.sh  7_all_takeoff.sh  8_start_record.sh  9_start_all_ego_planner.sh  A_all_land.sh  runall_vins.py  start_all_drones.sh  start_all_ranging_fusion.sh  start_all_vins.sh  start_drone.sh  start_ranging_fusion.sh  start_target_vins.sh  stop_all_nodes.sh  stop_vins.sh
network_utils/shfiles/tmp/: fly.sh  land.sh  record.sh  rspx4.sh  run_control.sh  start_drone.sh  start_drone_node.sh  stop_all_rosnode.py  stop_drone_node.py  takeoff.sh
network_utils/src/: drone_node.cpp  messages.proto  pose_pub_sub.cpp  serialization_helpers.hpp  server_node.cpp
nlink_parser/: CMakeLists.txt
nlink_parser/launch/: linktrack.launch  tofsense.launch
nlink_parser/msg/: LinktrackNodeframe1.msg  LinktrackNodeframe2.msg
nlink_parser/src/linktrack/: init.cpp
ranging_fusion/: CMakeLists.txt  package.xml
ranging_fusion/config/: param.yaml
ranging_fusion/launch/: ranging_fusion.launch
ranging_fusion/src/: Factors.h  globalOpt.cpp  globalOpt.h  globalOptNode.cpp  parameters.cpp  parameters.h
rotors_simulator/rotors_gazebo/launch/: MYROBOT.launch  single_uav.launch  spawn_mav.launch
